feat: Adds resource category
