# pkg/inventory/api/inventory.go
@@ -38,6 +38,7 @@ func QueryResourcesFromInventorySummary(ctx context.Context, client keibi.Client
 				ResourceName:         resource.Name,
 				ResourceType:         resource.ResourceType,
 				ResourceTypeName:     cloudservice.ResourceTypeName(resource.ResourceType),
+				ResourceCategory:     cloudservice.CategoryByResourceType(resource.ResourceType),
 				ResourceID:           resource.ResourceID,
 				Location:             resource.Location,
 				ProviderConnectionID: resource.SourceID,
@@ -56,6 +57,7 @@ func QueryResourcesFromInventorySummary(ctx context.Context, client keibi.Client
 				ResourceName:         resource.Name,
 				ResourceType:         resource.ResourceType,
 				ResourceTypeName:     cloudservice.ResourceTypeName(resource.ResourceType),
+				ResourceCategory:     cloudservice.CategoryByResourceType(resource.ResourceType),
 				ResourceGroup:        resource.ResourceGroup,
 				Location:             resource.Location,
 				ResourceID:           resource.ResourceID,
@@ -75,6 +77,7 @@ func QueryResourcesFromInventorySummary(ctx context.Context, client keibi.Client
 			Provider:             SourceType(resource.SourceType),
 			ResourceType:         resource.ResourceType,
 			ResourceTypeName:     cloudservice.ResourceTypeName(resource.ResourceType),
+			ResourceCategory:     cloudservice.CategoryByResourceType(resource.ResourceType),
 			Location:             resource.Location,
 			ResourceID:           resource.ResourceID,
 			ProviderConnectionID: resource.SourceID,
