# pkg/inventory/api/resource.go
@@ -135,6 +135,7 @@ func QueryResourcesWithSteampipeColumns(
 					ResourceName:         metadata.Name,
 					ResourceType:         resourceType,
 					ResourceTypeName:     cloudservice.ResourceTypeName(resourceType),
+					ResourceCategory:     cloudservice.CategoryByResourceType(resourceType),
 					ResourceID:           hit.Source.ID,
 					Location:             metadata.Region,
 					ProviderConnectionID: metadata.SourceID,
@@ -175,6 +176,7 @@ func QueryResourcesWithSteampipeColumns(
 					ResourceName:         metadata.Name,
 					ResourceType:         resourceType,
 					ResourceTypeName:     cloudservice.ResourceTypeName(resourceType),
+					ResourceCategory:     cloudservice.CategoryByResourceType(resourceType),
 					ResourceID:           hit.Source.ID,
 					ResourceGroup:        resourceGroup,
 					Location:             metadata.Location,
@@ -219,6 +221,7 @@ func QueryResourcesWithSteampipeColumns(
 				Provider:             SourceCloudAWS,
 				ResourceType:         aws.ResourceType,
 				ResourceTypeName:     cloudservice.ResourceTypeName(aws.ResourceType),
+				ResourceCategory:     cloudservice.CategoryByResourceType(aws.ResourceType),
 				Location:             aws.Location,
 				ResourceID:           aws.ResourceID,
 				ProviderConnectionID: aws.ProviderConnectionID,
@@ -232,6 +235,7 @@ func QueryResourcesWithSteampipeColumns(
 				Provider:             SourceCloudAzure,
 				ResourceType:         azure.ResourceType,
 				ResourceTypeName:     cloudservice.ResourceTypeName(azure.ResourceType),
+				ResourceCategory:     cloudservice.CategoryByResourceType(azure.ResourceType),
 				Location:             azure.Location,
 				ResourceID:           azure.ResourceID,
 				ProviderConnectionID: azure.ProviderConnectionID,
